Fix overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -206,6 +206,7 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	z-index: 1;
+	overflow: scroll;
 }
 
 .service__price--euros {
